[package]
name = "rustgrpc"
version = "0.1.0"
edition = "2024"

[dependencies]
tokio = { version = "1.28", features = ["rt-multi-thread", "macros"] }
futures = "0.3"
dotenv = "0.15.0"
env = "1.0.1"
log = "0.4"
env_logger = "0.11.8"
bs58 = "0.5.0"
yellowstone-grpc-client = "8.0.0"
yellowstone-grpc-proto = "8.0.0"
tonic = "0.12.3"