[package]
name = "rustgrpc"
version = "0.1.0"
edition = "2024"

[dependencies]
tokio = { version = "1.47.1", features = ["rt-multi-thread", "macros"] }
futures = "0.3"
dotenv = "0.15.0"
log = "0.4"
env_logger = "0.11.8"
bs58 = "0.5.0"
yellowstone-grpc-client = "9.0.0"
yellowstone-grpc-proto = "9.0.0"
tonic = "0.14.1"
rustls = { version = "0.23", features = ["ring"] }
orca_whirlpools = "4.0.1"
anchor-lang = "0.31.1"
borsh = { version = "1.5", features = ["derive"] }
solana-program = "2.3.0"
orca_whirlpools_client = "4.0.0"
spl-token = { version = "6.0.0", features=["no-entrypoint"] }
once_cell = "1.19"
hex = "0.4"
